--- a/includes/Includes_WinConfig/resources/default.css
+++ b/includes/Includes_WinConfig/resources/default.css
@@ -51,13 +51,13 @@
 	background-color: #FFFFFF;
 	border: 1px solid #CCCCCC;
 	padding: 0 5px;
+	position: static;
 }
 
 .winconfig fieldset {
 	border: 1px solid #CCCCCC;
 	margin: 5px 0 0 0;
-	padding: 5px;
-
+	padding: 5px !important;
 	display: block;
 	position: static;
 	background-color: transparent;
